--- a/glorify/index.html
+++ b/glorify/index.html
@@ -287,6 +287,51 @@
 
   <div class="blankHM"></div>
 
+  <!-- LRcarousel-->
+  <div class="colorBgGLORIFY">
+    <div class="blankHM"></div>
+    <!-- Arrow -->
+    <div class="wrapper">
+      <div class="element">
+        <h2 class="tArrow">allow users to engage with each other within the Glorify app <img class="seArrow"
+            src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+      </div>
+    </div>
+    <!-- Arrow -->
+
+    <div class="LRcarousel wrapper Grid--center" aria-label="LRcarousel" Tabindex="0">
+      <a class="carousel__skip-link" href="#skip-link">Skip the Carousel</a>
+      <div class="carousel__nav element">
+        <a class="slider-nav" aria-label="Go to slide 1">
+          <h4>Create &#38; join </h4>
+        </a>
+        <a class="slider-nav" aria-label="Go to slide 2">
+          <h4>Share &#38; pray</h4>
+
+        </a>
+        <a class="slider-nav" aria-label="Go to slide 3">
+          <h4>Discover &#38; connect</h4>
+
+        </a>
+
+      </div>
+      <div class="LRslides">
+        <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 3" tabindex="0">
+          <img src="Slideshow1.png" alt="">
+        </div>
+        <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 3" tabindex="0"> 
+          <img src="Slideshow2.png" alt="">
+        </div>
+        <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 3" tabindex="0"> 
+          <img src="Slideshow3.png" alt="">
+        </div>
+      </div>
+      <div class="carousel__skip-message" id="skip-link" tabindex="0"></div>
+    </div>
+    <div class="blankHM"></div>
+
+  </div>
+  <!-- LRcarousel-->
 
 
 
