--- a/glorify/index.html
+++ b/glorify/index.html
@@ -289,15 +289,15 @@
 
   <!-- LRcarousel-->
   <div class="colorBgGLORIFY">
-    <div class="blankHM"></div>
-    <!-- Arrow -->
+    <div class="blankHS"></div>
+    <!-- Slideshow Title -->
     <div class="wrapper">
-      <div class="element">
-        <h2 class="tArrow">allow users to engage with each other within the Glorify app <img class="seArrow"
-            src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+      <div class="Grid-cell">
+        <h2 class="element">Allow users to engage with each other within the Glorify app</h2>
       </div>
     </div>
-    <!-- Arrow -->
+    <!-- Slideshow Title -->
+    <div class="blankHXS"></div>
 
     <div class="LRcarousel wrapper Grid--center" aria-label="LRcarousel" Tabindex="0">
       <a class="carousel__skip-link" href="#skip-link">Skip the Carousel</a>
@@ -319,10 +319,10 @@
         <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 3" tabindex="0">
           <img src="Slideshow1.png" alt="">
         </div>
-        <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 3" tabindex="0"> 
+        <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 3" tabindex="0">
           <img src="Slideshow2.png" alt="">
         </div>
-        <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 3" tabindex="0"> 
+        <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 3" tabindex="0">
           <img src="Slideshow3.png" alt="">
         </div>
       </div>
@@ -336,7 +336,229 @@
 
 
 
+  <div class="blankHM"></div>
 
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--1of6">
+      <div class="Grid-cell">
+        <nav class="subNav element">
+          <ol>
+            <li><a href="#content1" class="newTitlePanel">Understand </a>
+              <ul class="newPanelV3">
+                <li><a href="#content11">C1 - SC 1</a></li>
+                <li><a href="#content12">C1 - SC 2</a></li>
+              </ul>
+            </li>
+            <li><a href="#content2" class="newTitlePanel">Define</a>
+              <ul class="newPanelV3">
+                <li><a href="#content21">C2 - SC 1</a></li>
+                <li><a href="#content22">C2 - SC 2</a></li>
+              </ul>
+            </li>
+
+            <li><a href="#content3" class="newTitlePanel">Wireframe</a>
+              <ul class="newPanelV3">
+                <li><a href="#content31"> C3 - SC 1 </a></li>
+                <li><a href="#content32">C3 - SC 2</a></li>
+              </ul>
+            </li>
+            <li><a href="#content4" class="newTitlePanel">Hi-Fi</a>
+              <ul class="newPanelV3">
+                <li><a href="#content41"> C3 - SC 1 </a></li>
+                <li><a href="#content42">C3 - SC 2</a></li>
+              </ul>
+            </li>
+          </ol>
+        </nav>
+      </div>
+      <div class="Grid-cell">
+        <section id="content1">
+          <!-- Title -->
+          <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
+            <div class="Grid-cell">
+              <h1 class="Grid Grid--center"> <span>Content 1</span><img class="moveUpDown widthLogo"
+                  src="../../icon/icon_research.svg" alt="Research">
+              </h1>
+            </div>
+          </div>
+          <!-- Title -->
+          <section id="content11">
+            <!-- Arrow -->
+            <div class="element">
+              <h2 class="tArrow">C1 - SC 1 <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
+            </div>
+            <!-- Arrow -->
+            <!-- Img -->
+            <div class="Grid Grid--full u-textCenter">
+              <div class="Grid-cell">
+                <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
+                </div>
+              </div>
+            </div>
+            <!-- Img -->
+          </section>
+          <section id="content12">
+            <!-- Arrow -->
+            <div class="element">
+              <h2 class="tArrow">C1 - SC 2 <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
+            </div>
+            <!-- Arrow -->
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="element">
+                  <p class="specialTextNote colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur
+                    adipiscing
+                    elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+          </section>
+        </section>
+
+        <section id="content2">
+          <section id="content21">
+            <!-- Title -->
+
+            <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
+              <div class="Grid-cell">
+                <h1 class="Grid Grid--center"> <span>Content 2</span><img class="moveUpDown widthLogo"
+                    src="../../icon/icon_research.svg" alt="Research">
+                </h1>
+              </div>
+            </div>
+            <!-- Title -->
+            <!-- Arrow -->
+            <div class="wrapper">
+              <div class="element">
+                <h2 class="tArrow">C2 - SC 1 <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
+              </div>
+            </div>
+            <!-- Arrow -->
+            <!-- Img -->
+
+            <div class="Grid Grid--full u-textCenter">
+              <div class="Grid-cell">
+                <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
+                </div>
+              </div>
+            </div>
+            <!-- Img -->
+          </section>
+          <section id="content22">
+
+            <!-- Title -->
+            <!-- Arrow -->
+            <div class="wrapper">
+              <div class="element">
+                <h2 class="tArrow">C2 - SC 2 <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
+              </div>
+            </div>
+            <!-- Arrow -->
+            <!-- Img -->
+
+            <div class="Grid Grid--full u-textCenter">
+              <div class="Grid-cell">
+                <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
+                </div>
+              </div>
+            </div>
+            <!-- Img -->
+            <!-- Img -->
+
+            <div class="Grid Grid--full u-textCenter">
+              <div class="Grid-cell">
+                <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
+                </div>
+              </div>
+            </div>
+            <!-- Img -->
+            <!-- Img -->
+
+            <div class="Grid Grid--full u-textCenter">
+              <div class="Grid-cell">
+                <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
+                </div>
+              </div>
+            </div>
+            <!-- Img -->
+          </section>
+        </section>
+        <section id="content3">
+          <section id="content31">
+            <!-- Title -->
+
+            <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
+              <div class="Grid-cell">
+                <h1 class="Grid Grid--center"> <span>Content 3</span><img class="moveUpDown widthLogo"
+                    src="../../icon/icon_research.svg" alt="Research">
+                </h1>
+              </div>
+            </div>
+            <!-- Title -->
+            <!-- Arrow -->
+            <div class="wrapper">
+              <div class="element">
+                <h2 class="tArrow">C3 - SC 1<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
+              </div>
+            </div>
+            <!-- Arrow -->
+            <!-- Img -->
+
+            <div class="Grid Grid--full u-textCenter">
+              <div class="Grid-cell">
+                <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
+                </div>
+              </div>
+            </div>
+            <!-- Img -->
+            <!-- Img -->
+
+            <div class="Grid Grid--full u-textCenter">
+              <div class="Grid-cell">
+                <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
+                </div>
+              </div>
+            </div>
+            <!-- Img -->
+          </section>
+          <section id="content32">
+            <!-- Arrow -->
+            <div class="wrapper">
+              <div class="element">
+                <h2 class="tArrow">C3 - SC 2 <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
+              </div>
+            </div>
+            <!-- Arrow -->
+            <!-- Img -->
+
+            <div class="Grid Grid--full u-textCenter">
+              <div class="Grid-cell">
+                <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
+                </div>
+              </div>
+            </div>
+            <!-- Img -->
+            <!-- Img -->
+
+            <div class="Grid Grid--full u-textCenter">
+              <div class="Grid-cell">
+                <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
+                </div>
+              </div>
+            </div>
+            <!-- Img -->
+          </section>
+        </section>
+      </div>
+
+
+
+
+    </div>
+  </div>
 
 
 
@@ -368,7 +590,6 @@
 
 
 
-  <!-- test -->
 
   <!-- The Modal -->
   <div id="modal" class="modal">
@@ -381,7 +602,7 @@
   <button id="myBtn" title="Back to top">
     <div id="dad">
       <div id="bro">
-        <img id="bottom-arrow" src="../../icon/arrow-top.svg" alt="back to top">
+        <img id="bottom-arrow" src="../icon/arrow-top.svg" alt="back to top">
       </div>
       <div id="sis">
         <h4>TOP</h4>
@@ -396,16 +617,16 @@
         <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
         <div class="footer-right">
           <a href="mailto:vickyw.design@gmail.com">
-            <img class="footer-logo" src="../../icon/mail.svg" alt="email">
+            <img class="footer-logo" src="../icon/mail.svg" alt="email">
           </a>
           <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
-            <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
+            <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
           </a>
           <a target="_blank" href="https://github.com/vicky-wyq">
-            <img class="footer-logo" src="../../icon/git.svg" alt="github">
+            <img class="footer-logo" src="../icon/git.svg" alt="github">
           </a>
           <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-            <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
+            <img class="footer-logo" src="../icon/ins.svg" alt="medium">
           </a>
         </div>
       </div>
