--- a/design_system/index.html
+++ b/design_system/index.html
@@ -371,12 +371,12 @@
               <p class="specialTextS">Display 2, Lorem ipsum dolor sit amet</p>
               <div class="blankHXS"></div>
               <div class="chip">Heading</div>
-              <h1>h1 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h1>
-              <h2>h2 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h2>
-              <h3>h3 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h3>
-              <h4>h4 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h4>
-              <h5>h5 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h5>
-              <h6>h6 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h6>
+              <h1 class="fontWeight500">h1 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h1>
+              <h2 class="fontWeight500">h2 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h2>
+              <h3 class="fontWeight300">h3 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h3>
+              <h4 class="fontWeight300">h4 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h4>
+              <h5 class="fontWeight300">h5 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h5>
+              <h6 class="fontWeight300">h6 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h6>
               <div class="blankHXS"></div>
               <div class="chip">Body</div>
               <p class="thick">Paragraph, thick, Lorem ipsum dolor sit amet</p>
@@ -387,12 +387,12 @@
               <strong>
                 <h3>Bold, font weight 500, Lorem ipsum dolor sit amet</h3>
               </strong>
-              <h3 class="allCaps">Uppercase, Lorem ipsum dolor sit amet</h3>
+              <h3 class="allCaps fontWeight300">Uppercase, Lorem ipsum dolor sit amet</h3>
               <p class="tArrow">Label, Lorem ipsum dolor sit amet</p>
               <p class="specialTextNote">Note, Lorem ipsum dolor sit amet</p>
               <div class="t-hello">Note, Lorem ipsum dolor sit amet</div>
-              <h3 class="textUnderline colorGrey">text decoration</h3>
-              <h3 class="textDecor">text decoration</h3>
+              <h3 class="textUnderline fontWeight300">text decoration</h3>
+              <h3 class="textDecor fontWeight300">text decoration</h3>
             </div>
             <!-- Font -->
           </section>
