--- a/glorify/index.html
+++ b/glorify/index.html
@@ -31,6 +31,8 @@
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="../scripts_project.js"></script>
+  <!--   
+ -->
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -300,20 +302,17 @@
     <div class="blankHXS"></div>
 
     <div class="LRcarousel wrapper Grid--center" aria-label="LRcarousel" Tabindex="0">
-      <a class="carousel__skip-link" href="#skip-link">Skip the Carousel</a>
       <div class="carousel__nav element">
-        <a class="slider-nav" aria-label="Go to slide 1">
-          <h4>Create &#38; join </h4>
+        <a class="slider-nav up" aria-label="Go to slide 1">
+          <div>Create &#38; join</div>
         </a>
-        <a class="slider-nav" aria-label="Go to slide 2">
-          <h4>Share &#38; pray</h4>
+        <a class="slider-nav up" aria-label="Go to slide 2">
+          <div>Share &#38; pray</div>
 
         </a>
-        <a class="slider-nav" aria-label="Go to slide 3">
-          <h4>Discover &#38; connect</h4>
-
+        <a class="slider-nav up" aria-label="Go to slide 3">
+          <div>Discover &#38; connect</div>
         </a>
-
       </div>
       <div class="LRslides">
         <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 3" tabindex="0">
@@ -326,7 +325,6 @@
           <img src="Slideshow3.png" alt="">
         </div>
       </div>
-      <div class="carousel__skip-message" id="skip-link" tabindex="0"></div>
     </div>
     <div class="blankHM"></div>
 
