--- a/about/index.html
+++ b/about/index.html
@@ -130,7 +130,7 @@
   <!-- header -->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
+      <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
       <div class="navbar">
         <ul class="nav-menu">
           <li class="nav-item inactive marginZero"><a href="/" class=" nav-link box font300-1080 ">PROJECT</a>
