--- a/photography/index.html
+++ b/photography/index.html
@@ -129,7 +129,7 @@
   <!-- header -->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
+      <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
 
       <div class="navbar">
         <ul class="nav-menu">
