--- a/navigation/V1/index.html
+++ b/navigation/V1/index.html
@@ -148,20 +148,20 @@
 
     <div class="backgroundColorNav ">
 
-      <a href="/navigation/" class="centerVer logo pointer colorBlack Grid--center"><img class="moveLeftRight widthLogo"
+      <a href="/navigation/" class="centerVer logo pointer colorBlack Grid--center"><img class="moveLeftRight iconXS"
           src="../../icon/arrow-back.svg" alt="Go back">
         <h5>BACK</h5>
       </a>
       <div class="navbar">
         <ul class="nav-menu">
           <li class="dropdown nav-item active  marginZero"><a href="/" class="nav-link box">PROJECT</a>
-            <div class="dropdown-content">
 
-              <a target="_blank" href="/glorify/">
+            <div class="dropdown-content">
+              <a href="/glorify/">
                 <div class="cardBorder GLORIFY">
                   <img src="../../image/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
-                    <h6 class="colorBlack">GLORIFY | Daily worship</h6>
+                    <h5 class="colorBlack">GLORIFY | Daily worship</h5>
                   </div>
                 </div>
               </a>
@@ -177,7 +177,7 @@
                 <div class="cardBorder SEER ">
                   <img src="../../image/Cover_SEER.png" alt="SEER">
                   <div class="element">
-                    <h6 class="colorBlack">SEER | Track business performance</h6>
+                    <h5 class="colorBlack">SEER | Business performance</h5>
                   </div>
                 </div>
               </a>
@@ -186,15 +186,7 @@
                 <div class="cardBorder ">
                   <img src="../../image/Cover_portfolioWeb.png" alt="Design System">
                   <div class="element">
-                    <h6 class="colorBlack">Design System | vickywang.me</h6>
-                  </div>
-                </div>
-              </a>
-              <a href="/navigation/">
-                <div class="cardBorder ">
-                  <img src="../../image/Cover_portfolioWeb.png" alt="Design System">
-                  <div class="element">
-                    <h6 class="colorBlack">Navigation Design | vickywang.me</h6>
+                    <h5 class="colorBlack">Design System | vickywang.me</h5>
                   </div>
                 </div>
               </a>
@@ -1192,7 +1184,18 @@
 
 
 
-
+  <!--back to top-->
+  <button id="myBtn" title="Back to top">
+    <div id="dad">
+      <div id="bro">
+        <img id="bottom-arrow" class="" src="../../icon/arrow-top.svg" alt="back to top">
+      </div>
+      <div id="sis">
+        <h4>TOP</h4>
+      </div>
+    </div>
+  </button>
+  <!--back to top-->
 
 
 
