--- a/navigation/V2/index.html
+++ b/navigation/V2/index.html
@@ -147,19 +147,19 @@
 
 
     <div class="backgroundColorNav ">
-      <a href="/navigation/" class="centerVer logo pointer colorBlack Grid--center"><img class="moveLeftRight widthLogo"
+      <a href="/navigation/" class="centerVer logo pointer colorBlack Grid--center"><img class="moveLeftRight iconXS"
         src="../../icon/arrow-back.svg" alt="Go back"><h5>BACK</h5> 
       </a>
       <div class="navbar">
         <ul class="nav-menu">
           <li class="dropdown nav-item active  marginZero"><a href="/" class="nav-link box">PROJECT</a>
-            <div class="dropdown-content">
 
-              <a target="_blank" href="/glorify/">
+            <div class="dropdown-content">
+              <a href="/glorify/">
                 <div class="cardBorder GLORIFY">
                   <img src="../../image/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
-                    <h6 class="colorBlack">GLORIFY | Daily worship</h6>
+                    <h5 class="colorBlack">GLORIFY | Daily worship</h5>
                   </div>
                 </div>
               </a>
@@ -175,7 +175,7 @@
                 <div class="cardBorder SEER ">
                   <img src="../../image/Cover_SEER.png" alt="SEER">
                   <div class="element">
-                    <h6 class="colorBlack">SEER | Track business performance</h6>
+                    <h5 class="colorBlack">SEER | Business performance</h5>
                   </div>
                 </div>
               </a>
@@ -184,15 +184,7 @@
                 <div class="cardBorder ">
                   <img src="../../image/Cover_portfolioWeb.png" alt="Design System">
                   <div class="element">
-                    <h6 class="colorBlack">Design System | vickywang.me</h6>
-                  </div>
-                </div>
-              </a>
-              <a href="/navigation/">
-                <div class="cardBorder ">
-                  <img src="../../image/Cover_portfolioWeb.png" alt="Design System">
-                  <div class="element">
-                    <h6 class="colorBlack">Navigation Design | vickywang.me</h6>
+                    <h5 class="colorBlack">Design System | vickywang.me</h5>
                   </div>
                 </div>
               </a>
@@ -745,6 +737,7 @@
 
 
   <div class="blankHL"></div>
+
 
 
 
