--- a/navigation/index.html
+++ b/navigation/index.html
@@ -145,18 +145,17 @@
 
 
     <div class="backgroundColorNav ">
-      <a href="http://vickywang.me/" class="logo pointer colorBlack">VW
-      </a>
+      <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
+
       <div class="navbar">
         <ul class="nav-menu">
           <li class="dropdown nav-item active  marginZero"><a href="/" class="nav-link box">PROJECT</a>
             <div class="dropdown-content">
-
               <a href="/glorify/">
                 <div class="cardBorder GLORIFY">
                   <img src="../image/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
-                    <h6 class="colorBlack">GLORIFY | Daily worship</h6>
+                    <h5 class="colorBlack">GLORIFY | Daily worship</h5>
                   </div>
                 </div>
               </a>
@@ -172,7 +171,7 @@
                 <div class="cardBorder SEER ">
                   <img src="../image/Cover_SEER.png" alt="SEER">
                   <div class="element">
-                    <h6 class="colorBlack">SEER | Track business performance</h6>
+                    <h5 class="colorBlack">SEER | Business performance</h5>
                   </div>
                 </div>
               </a>
@@ -181,11 +180,10 @@
                 <div class="cardBorder ">
                   <img src="../image/Cover_portfolioWeb.png" alt="Design System">
                   <div class="element">
-                    <h6 class="colorBlack">Design System | vickywang.me</h6>
+                    <h5 class="colorBlack">Design System | vickywang.me</h5>
                   </div>
                 </div>
               </a>
-
             </div>
           </li>
 
