--- a/design_system/index.html
+++ b/design_system/index.html
@@ -371,12 +371,18 @@
               <p class="specialTextS">Display 2, Lorem ipsum dolor sit amet</p>
               <div class="blankHXS"></div>
               <div class="chip">Heading</div>
-              <h1 class="fontWeight500">h1 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h1>
-              <h2 class="fontWeight500">h2 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h2>
-              <h3 class="fontWeight300">h3 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h3>
-              <h4 class="fontWeight300">h4 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h4>
-              <h5 class="fontWeight300">h5 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h5>
-              <h6 class="fontWeight300">h6 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h6>
+              <h1 class="fontWeight500">h1 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet
+              </h1>
+              <h2 class="fontWeight500">h2 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet
+              </h2>
+              <h3 class="fontWeight300">h3 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet
+              </h3>
+              <h4 class="fontWeight300">h4 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet
+              </h4>
+              <h5 class="fontWeight300">h5 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet
+              </h5>
+              <h6 class="fontWeight300">h6 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet
+              </h6>
               <div class="blankHXS"></div>
               <div class="chip">Body</div>
               <p class="thick">Paragraph, thick, Lorem ipsum dolor sit amet</p>
@@ -1283,7 +1289,8 @@
                       <div class="elementInnerDemoCard heightS">
                         <h4> <strong> Title </strong> </h4>
                         <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                          labore et dolore magna aliqua. Velit euismod in pellentesque massa placerat duis ultricies. </h5>
+                          labore et dolore magna aliqua. Velit euismod in pellentesque massa placerat duis ultricies.
+                        </h5>
                       </div>
                     </div>
                   </div>
@@ -1438,37 +1445,23 @@
             </div>
           </section>
           <!-- Accordion -->
-
           <div class="blankHM"></div>
-
           <section id="content43">
             <div class="element">
-              <p class="tArrow">Slideshow <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+              <p class="tArrow">Slideshows <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
             </div>
-            <div class="blankHS"></div>
-
+            <div class="blankHXS"></div>
             <!-- LRcarousel-->
-            <section class="LRcarousel" aria-label="LRcarousel" Tabindex="0">
-              <a class="carousel__skip-link" href="#skip-link">Skip the Carousel</a>
+            <div class="SkylineBlueLter LRcarousel Grid--center" aria-label="LRcarousel" Tabindex="0" id="carousel1">
               <div class="carousel__nav">
-                <a class="slider-nav" aria-label="Go to slide 1">
-                  <h4><strong>Lorem ipsum</strong> </h4>
+                <a class="slider-nav up" aria-label="Go to slide 1">
+                  <div>Lorem ipsum</div>
                 </a>
-                <a class="slider-nav" aria-label="Go to slide 2">
-                  <h4>Lorem ipsum</h4>
-
+                <a class="slider-nav up" aria-label="Go to slide 2">
+                  <div>Lorem ipsum</div>
                 </a>
-                <a class="slider-nav" aria-label="Go to slide 3">
-                  <h4>Lorem ipsum</h4>
-
-                </a>
-                <a class="slider-nav" aria-label="Go to slide 4">
-                  <h4>Lorem ipsum</h4>
-
-                </a>
-                <a class="slider-nav" aria-label="Go to slide 5">
-                  <h4>Lorem ipsum</h4>
-
+                <a class="slider-nav up" aria-label="Go to slide 3">
+                  <div>Lorem ipsum</div>
                 </a>
               </div>
               <div class="LRslides">
@@ -1481,22 +1474,70 @@
                 <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0"> <img
                     src="../Placeholder.svg" alt="">
                 </div>
-                <div class="slides-item slide-4" id="slide-4" aria-label="slide 4 of 5" tabindex="0"> <img
-                    src="../Placeholder.svg" alt="">
-                </div>
-                <div class="slides-item slide-5" id="slide-5" aria-label="slide 5 of 5" tabindex="0"> <img
-                    src="../Placeholder.svg" alt="">
-                </div>
+
               </div>
-
-              <div class="carousel__skip-message" id="skip-link" tabindex="0"></div>
-
-
-            </section>
+            </div>
             <!-- LRcarousel-->
+            <!-- LRcarousel without background-->
+            <div class=" LRcarousel Grid--center" aria-label="LRcarousel" Tabindex="0" id="carousel2">
+              <div class="carousel__nav">
+                <a class="slider-nav noBg" aria-label="Go to slide 1">
+                  <div>Lorem ipsum</div>
+                </a>
+                <a class="slider-nav noBg" aria-label="Go to slide 2">
+                  <div>Lorem ipsum</div>
+                </a>
+                <a class="slider-nav noBg" aria-label="Go to slide 3">
+                  <div>Lorem ipsum</div>
+                </a>
+              </div>
+              <div class="LRslides">
+                <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+                  <img src="../Placeholder.svg" alt="">
+                </div>
+                <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0"> <img
+                    src="../Placeholder.svg" alt="">
+                </div>
+                <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0"> <img
+                    src="../Placeholder.svg" alt="">
+                </div>
+
+              </div>
+            </div>
+            <!-- LRcarousel without background-->
             <div class="blankHM"></div>
 
+            <div class="blankHXS"></div>
+            <!-- TBcarousel-->
+            <div class="SkylineBlueLter TBcarousel Grid--center" aria-label="TBcarousel" Tabindex="0">
+              <div class="TBslides">
+                <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+                  <img src="../Placeholder.svg" alt="">
+                </div>
+                <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0"> <img
+                    src="../Placeholder.svg" alt="">
+                </div>
+                <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0"> <img
+                    src="../Placeholder.svg" alt="">
+                </div>
 
+              </div>
+              <div class="TBcarouselNav">
+                <a class="TBsliderNav up" aria-label="Go to slide 1">
+                  <div>Lorem ipsum</div>
+                </a>
+                <a class="TBsliderNav up" aria-label="Go to slide 2">
+                  <div>Lorem ipsum</div>
+                </a>
+                <a class="TBsliderNav up" aria-label="Go to slide 3">
+                  <div>Lorem ipsum</div>
+                </a>
+              </div>
+              <div class="blankHS"></div>
+
+            </div>
+            <!-- TBcarousel-->
+            <div class="blankHM"></div>
 
           </section>
           <div class="blankHM"></div>
