--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1452,19 +1452,26 @@
             </div>
             <div class="blankHXS"></div>
             <!-- LRcarousel-->
-            <div class="SkylineBlueLter LRcarousel Grid--center" aria-label="LRcarousel" Tabindex="0" id="carousel1">
-              <div class="carousel__nav">
-                <a class="slider-nav up" aria-label="Go to slide 1">
+            <div class="wrapper">
+              <div class="Grid-cell">
+                <h3 class="">Horizontal layout with background color </h3>
+              </div>
+            </div>
+            <div class="SkylineBlueLter LRcarousel Grid Grid--gutters Grid--1of4 Grid--center u-textCenter"
+              aria-label="LRcarousel" Tabindex="0" id="carousel1">
+
+              <div class="carousel__nav Grid-cell">
+                <a class="slider-nav" aria-label="Go to slide 1">
                   <div>Lorem ipsum</div>
                 </a>
-                <a class="slider-nav up" aria-label="Go to slide 2">
+                <a class="slider-nav" aria-label="Go to slide 2">
                   <div>Lorem ipsum</div>
                 </a>
-                <a class="slider-nav up" aria-label="Go to slide 3">
+                <a class="slider-nav" aria-label="Go to slide 3">
                   <div>Lorem ipsum</div>
                 </a>
               </div>
-              <div class="LRslides">
+              <div class="LRslides Grid-cell">
                 <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
                   <img src="../Placeholder.svg" alt="">
                 </div>
@@ -1478,20 +1485,29 @@
               </div>
             </div>
             <!-- LRcarousel-->
+            <div class="blankHM"></div>
+
+            <div class="wrapper">
+              <div class="Grid-cell">
+                <h3 class="">Horizontal layout without background color </h3>
+              </div>
+            </div>
             <!-- LRcarousel without background-->
-            <div class=" LRcarousel Grid--center" aria-label="LRcarousel" Tabindex="0" id="carousel2">
-              <div class="carousel__nav">
-                <a class="slider-nav noBg" aria-label="Go to slide 1">
+
+            <div class="LRcarousel Grid Grid--gutters Grid--1of4 Grid--center u-textCenter"
+              aria-label="LRcarousel" Tabindex="0" id="carousel2">
+              <div class="carousel__nav noBg Grid-cell">
+                <a class="slider-nav" aria-label="Go to slide 1">
                   <div>Lorem ipsum</div>
                 </a>
-                <a class="slider-nav noBg" aria-label="Go to slide 2">
+                <a class="slider-nav" aria-label="Go to slide 2">
                   <div>Lorem ipsum</div>
                 </a>
-                <a class="slider-nav noBg" aria-label="Go to slide 3">
+                <a class="slider-nav" aria-label="Go to slide 3">
                   <div>Lorem ipsum</div>
                 </a>
               </div>
-              <div class="LRslides">
+              <div class="LRslides Grid-cell">
                 <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
                   <img src="../Placeholder.svg" alt="">
                 </div>
