--- a/design_system/index.html
+++ b/design_system/index.html
@@ -197,8 +197,11 @@
 
       <div class="ProjectBannerInnerND">
         <h1><strong>Design System</strong> </h1>
-        <h3 class="Grid Grid--center colorBlack">Please adjust your browser window to view the responsive layout</h3>
-        <img class="shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
+
+        <h3 class="Grid Grid--center colorBlack">Click, hover, or adjust the viewport to observe the responsive layout
+          and component behavior</h3>
+        <!--       <img class="shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow"> -->
+
         <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
 
       </div>
@@ -209,8 +212,8 @@
       <img class="displayTablet" src="MockupS.png" alt="vickywang.me">
       <div class="ProjectBannerInnerND">
         <h1><strong>Design System</strong> </h1>
-        <h3 class="Grid Grid--center colorBlack">Please adjust your browser window to view the responsive layout</h3>
-        <img class="shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
+        <h3 class="Grid Grid--center colorBlack">Click, hover, or adjust the viewport to observe the responsive layout
+          and component behavior</h3>
         <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
 
       </div>
@@ -220,8 +223,8 @@
       <img class="displayPhone" src="MockupXS.png" alt="vickywang.me">
       <div class="ProjectBannerInnerND">
         <h1><strong>Design System</strong> </h1>
-        <h3 class="Grid Grid--center colorBlack">Please adjust your browser window to view the responsive layout</h3>
-        <img class="shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
+        <h3 class="Grid Grid--center colorBlack">Click, hover, or adjust the viewport to observe the responsive layout
+          and component behavior</h3>
         <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
 
       </div>
@@ -295,7 +298,6 @@
 
           <h4>VS Code</h4>
           <h4>WebAIM</h4>
-          <h4>Figma</h4>
           <h4>Photoshop</h4>
         </div>
       </div>
@@ -335,7 +337,7 @@
               <ul class="newPanelV3">
                 <li><a href="#content41">Icon &#38; button </a></li>
                 <li><a href="#content42">Accordion</a></li>
-                <li><a href="#content43">Slideshow </a></li>
+                <li><a href="#content43">Slideshows </a></li>
               </ul>
             </li>
           </ol>
@@ -1566,33 +1568,33 @@
             </div>
             <!-- TBcarousel-->
 
-            <div class="TBcarousel Grid--center Grid Grid--full u-textCenter" aria-label="TBcarousel"
-            Tabindex="0" id="TBcarousel2">
-            <div class="TBslides Grid-cell">
-              <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
-                <img src="../Placeholder.svg" alt="">
+            <div class="TBcarousel Grid--center Grid Grid--full u-textCenter" aria-label="TBcarousel" Tabindex="0"
+              id="TBcarousel2">
+              <div class="TBslides Grid-cell">
+                <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+                  <img src="../Placeholder.svg" alt="">
+                </div>
+                <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0"> <img
+                    src="../Placeholder.svg" alt="">
+                </div>
+                <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0"> <img
+                    src="../Placeholder.svg" alt="">
+                </div>
               </div>
-              <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0"> <img
-                  src="../Placeholder.svg" alt="">
+              <div class="TBcarouselNav Grid-cell noBg">
+                <a class="TBsliderNav" aria-label="Go to slide 1">
+                  <div>Lorem ipsum</div>
+                </a>
+                <a class="TBsliderNav" aria-label="Go to slide 2">
+                  <div>Lorem ipsum</div>
+                </a>
+                <a class="TBsliderNav" aria-label="Go to slide 3">
+                  <div>Lorem ipsum</div>
+                </a>
               </div>
-              <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0"> <img
-                  src="../Placeholder.svg" alt="">
-              </div>
+              <div class="blankHS"></div>
             </div>
-            <div class="TBcarouselNav Grid-cell noBg">
-              <a class="TBsliderNav" aria-label="Go to slide 1">
-                <div>Lorem ipsum</div>
-              </a>
-              <a class="TBsliderNav" aria-label="Go to slide 2">
-                <div>Lorem ipsum</div>
-              </a>
-              <a class="TBsliderNav" aria-label="Go to slide 3">
-                <div>Lorem ipsum</div>
-              </a>
-            </div>
-            <div class="blankHS"></div>
-          </div>
-          <div class="blankHM"></div>
+            <div class="blankHM"></div>
             <!-- TBcarousel-->
             <div class="blankHM"></div>
 
