--- a/glorify/index.html
+++ b/glorify/index.html
@@ -286,12 +286,9 @@
     </div>
 
   </div>
-
-  <div class="blankHM"></div>
-
-  <!-- LRcarousel-->
+  <div class="blankHS"></div>
   <div class="colorBgGLORIFY">
-    <div class="blankHS"></div>
+    <div class="blankHXS"></div>
     <!-- Slideshow Title -->
     <div class="wrapper">
       <div class="Grid-cell">
@@ -299,38 +296,38 @@
       </div>
     </div>
     <!-- Slideshow Title -->
-    <div class="blankHXS"></div>
-
-    <div class="LRcarousel wrapper Grid--center" aria-label="LRcarousel" Tabindex="0">
-      <div class="carousel__nav element">
-        <a class="slider-nav up" aria-label="Go to slide 1">
+    <div class="wrapper LRcarousel Grid Grid--gutters Grid--1of4 Grid--center u-textCenter" aria-label="LRcarousel"
+      Tabindex="0" id="carousel1">
+      <div class="carousel__nav Grid-cell">
+        <a class="slider-nav" aria-label="Go to slide 1">
           <div>Create &#38; join</div>
         </a>
-        <a class="slider-nav up" aria-label="Go to slide 2">
+        <a class="slider-nav" aria-label="Go to slide 2">
           <div>Share &#38; pray</div>
-
         </a>
-        <a class="slider-nav up" aria-label="Go to slide 3">
+        <a class="slider-nav" aria-label="Go to slide 3">
           <div>Discover &#38; connect</div>
         </a>
       </div>
-      <div class="LRslides">
-        <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 3" tabindex="0">
+      <div class="LRslides Grid-cell">
+        <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
           <img src="Slideshow1.png" alt="">
         </div>
-        <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 3" tabindex="0">
+        <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
           <img src="Slideshow2.png" alt="">
+
         </div>
-        <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 3" tabindex="0">
+        <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
           <img src="Slideshow3.png" alt="">
+
         </div>
+
       </div>
     </div>
-    <div class="blankHM"></div>
+    <div class="blankHXS"></div>
 
   </div>
   <!-- LRcarousel-->
-
 
 
 
