--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1454,150 +1454,158 @@
             </div>
             <div class="blankHXS"></div>
             <!-- LRcarousel-->
-            <div class="wrapper">
-              <div class="Grid-cell">
-                <h3 class="">Horizontal layout with background color </h3>
-              </div>
-            </div>
-            <div class="SkylineBlueLter LRcarousel Grid Grid--gutters Grid--1of4 Grid--center u-textCenter"
-              aria-label="LRcarousel" Tabindex="0" id="carousel1">
+            <div class="SkylineBlueLter">
+              <div class="blankHXS"></div>
+              <!-- Slideshow Title -->
+              <h2 class="element">Horizontal layout with background color </h2>
+              <!-- Slideshow Title -->
+              <div class="wrapper LRcarousel Grid Grid--gutters Grid--1of4 Grid--center u-textCenter"
+                aria-label="LRcarousel" Tabindex="0" id="carousel1">
+                <div class="carousel__nav Grid-cell">
+                  <a class="slider-nav" aria-label="Go to slide 1">
+                    <div>Lorem ipsum</div>
+                  </a>
+                  <a class="slider-nav" aria-label="Go to slide 2">
+                    <div>Lorem ipsum</div>
+                  </a>
+                  <a class="slider-nav" aria-label="Go to slide 3">
+                    <div>Lorem ipsum</div>
+                  </a>
+                </div>
+                <div class="LRslides Grid-cell">
+                  <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+                    <img src="../Placeholder.svg" alt="">
+                  </div>
+                  <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
+                    <img src="../Placeholder.svg" alt="">
 
-              <div class="carousel__nav Grid-cell">
-                <a class="slider-nav" aria-label="Go to slide 1">
-                  <div>Lorem ipsum</div>
-                </a>
-                <a class="slider-nav" aria-label="Go to slide 2">
-                  <div>Lorem ipsum</div>
-                </a>
-                <a class="slider-nav" aria-label="Go to slide 3">
-                  <div>Lorem ipsum</div>
-                </a>
+                  </div>
+                  <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
+                    <img src="../Placeholder.svg" alt="">
+                  </div>
+                </div>
               </div>
-              <div class="LRslides Grid-cell">
-                <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
-                  <img src="../Placeholder.svg" alt="">
-                </div>
-                <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0"> <img
-                    src="../Placeholder.svg" alt="">
-                </div>
-                <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0"> <img
-                    src="../Placeholder.svg" alt="">
-                </div>
+              <div class="blankHXS"></div>
 
-              </div>
             </div>
             <!-- LRcarousel-->
             <div class="blankHM"></div>
 
-            <div class="wrapper">
-              <div class="Grid-cell">
-                <h3 class="">Horizontal layout without background color </h3>
+            <!-- LRcarousel without background-->
+
+            <div class="WhiteBg">
+              <div class="blankHXS"></div>
+              <!-- Slideshow Title -->
+              <h2 class="element">Horizontal layout without background color </h2>
+              <!-- Slideshow Title -->
+              <div class="wrapper LRcarousel Grid Grid--gutters Grid--1of4 Grid--center u-textCenter"
+                aria-label="LRcarousel" Tabindex="0" id="carousel2">
+                <div class="carousel__nav noBg Grid-cell">
+                  <a class="slider-nav" aria-label="Go to slide 1">
+                    <div>Lorem ipsum</div>
+                  </a>
+                  <a class="slider-nav" aria-label="Go to slide 2">
+                    <div>Lorem ipsum</div>
+                  </a>
+                  <a class="slider-nav" aria-label="Go to slide 3">
+                    <div>Lorem ipsum</div>
+                  </a>
+                </div>
+                <div class="LRslides Grid-cell">
+                  <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+                    <img src="../PlaceholderDark.svg" alt="">
+                  </div>
+                  <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
+                    <img src="../PlaceholderDark.svg" alt="">
+
+                  </div>
+                  <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
+                    <img src="../PlaceholderDark.svg" alt="">
+                  </div>
+                </div>
               </div>
+              <div class="blankHXS"></div>
             </div>
             <!-- LRcarousel without background-->
 
-            <div class="LRcarousel Grid Grid--gutters Grid--1of4 Grid--center u-textCenter" aria-label="LRcarousel"
-              Tabindex="0" id="carousel2">
-              <div class="carousel__nav noBg Grid-cell">
-                <a class="slider-nav" aria-label="Go to slide 1">
-                  <div>Lorem ipsum</div>
-                </a>
-                <a class="slider-nav" aria-label="Go to slide 2">
-                  <div>Lorem ipsum</div>
-                </a>
-                <a class="slider-nav" aria-label="Go to slide 3">
-                  <div>Lorem ipsum</div>
-                </a>
-              </div>
-              <div class="LRslides Grid-cell">
-                <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
-                  <img src="../Placeholder.svg" alt="">
-                </div>
-                <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0"> <img
-                    src="../Placeholder.svg" alt="">
-                </div>
-                <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0"> <img
-                    src="../Placeholder.svg" alt="">
-                </div>
 
-              </div>
-            </div>
-            <!-- LRcarousel without background-->
+
+
             <div class="blankHM"></div>
 
-            <div class="blankHXS"></div>
-            <div class="wrapper">
-              <div class="Grid-cell">
-                <h3 class="">Vertical layout with background color </h3>
-              </div>
-            </div>
-            <!-- TBcarousel-->
-            <div class="SkylineBlueLter TBcarousel Grid--center Grid Grid--full u-textCenter" aria-label="TBcarousel"
-              Tabindex="0" id="TBcarousel1">
-              <div class="TBslides Grid-cell">
-                <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
-                  <img src="../Placeholder.svg" alt="">
-                </div>
-                <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0"> <img
-                    src="../Placeholder.svg" alt="">
-                </div>
-                <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0"> <img
-                    src="../Placeholder.svg" alt="">
-                </div>
-              </div>
-              <div class="TBcarouselNav Grid-cell">
-                <a class="TBsliderNav" aria-label="Go to slide 1">
-                  <div>Lorem ipsum</div>
-                </a>
-                <a class="TBsliderNav" aria-label="Go to slide 2">
-                  <div>Lorem ipsum</div>
-                </a>
-                <a class="TBsliderNav" aria-label="Go to slide 3">
-                  <div>Lorem ipsum</div>
-                </a>
-              </div>
-              <div class="blankHS"></div>
-            </div>
-            <div class="blankHM"></div>
 
-            <!-- TBcarousel-->
-            <div class="wrapper">
-              <div class="Grid-cell">
-                <h3 class="">Vertical layout without background color </h3>
-              </div>
-            </div>
-            <!-- TBcarousel-->
+            <!-- TBcarousel with background-->
 
-            <div class="TBcarousel Grid--center Grid Grid--full u-textCenter" aria-label="TBcarousel" Tabindex="0"
-              id="TBcarousel2">
-              <div class="TBslides Grid-cell">
-                <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
-                  <img src="../Placeholder.svg" alt="">
+            <div class="SkylineBlueLter">
+              <div class="blankHXS"></div>
+              <!-- Slideshow Title -->
+              <h2 class="element">Vertical layout with background color </h2>
+              <!-- Slideshow Title -->
+              <div class="TBcarousel Grid--center Grid Grid--full u-textCenter" aria-label="TBcarousel" Tabindex="0"
+                id="TBcarousel1">
+                <div class="TBslides">
+                  <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+                    <img src="../Placeholder.svg" alt="">
+                  </div>
+                  <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0"> <img
+                      src="../Placeholder.svg" alt="">
+                  </div>
+                  <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0"> <img
+                      src="../Placeholder.svg" alt="">
+                  </div>
                 </div>
-                <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0"> <img
-                    src="../Placeholder.svg" alt="">
+                <div class="TBcarouselNav Grid-cell">
+                  <a class="TBsliderNav" aria-label="Go to slide 1">
+                    <div>Lorem ipsum</div>
+                  </a>
+                  <a class="TBsliderNav" aria-label="Go to slide 2">
+                    <div>Lorem ipsum</div>
+                  </a>
+                  <a class="TBsliderNav" aria-label="Go to slide 3">
+                    <div>Lorem ipsum</div>
+                  </a>
                 </div>
-                <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0"> <img
-                    src="../Placeholder.svg" alt="">
-                </div>
+                <div class="blankHS"></div>
               </div>
-              <div class="TBcarouselNav Grid-cell noBg">
-                <a class="TBsliderNav" aria-label="Go to slide 1">
-                  <div>Lorem ipsum</div>
-                </a>
-                <a class="TBsliderNav" aria-label="Go to slide 2">
-                  <div>Lorem ipsum</div>
-                </a>
-                <a class="TBsliderNav" aria-label="Go to slide 3">
-                  <div>Lorem ipsum</div>
-                </a>
-              </div>
-              <div class="blankHS"></div>
+              <div class="blankHXS"></div>
             </div>
+            <!-- TBcarousel with background-->
             <div class="blankHM"></div>
             <!-- TBcarousel-->
             <div class="blankHM"></div>
-
+            <div class="WhiteBg">
+              <div class="blankHXS"></div>
+              <!-- Slideshow Title -->
+              <h2 class="element">Vertical layout without background color </h2>
+              <!-- Slideshow Title -->
+              <div class="TBcarousel Grid--center Grid Grid--full u-textCenter" aria-label="TBcarousel" Tabindex="0"
+                id="TBcarousel2">
+                <div class="TBslides">
+                  <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+                    <img src="../PlaceholderDark.svg" alt="">
+                  </div>
+                  <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0"> <img
+                      src="../PlaceholderDark.svg" alt="">
+                  </div>
+                  <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0"> <img
+                      src="../PlaceholderDark.svg" alt="">
+                  </div>
+                </div>
+                <div class="TBcarouselNav Grid-cell noBg">
+                  <a class="TBsliderNav" aria-label="Go to slide 1">
+                    <div>Lorem ipsum</div>
+                  </a>
+                  <a class="TBsliderNav" aria-label="Go to slide 2">
+                    <div>Lorem ipsum</div>
+                  </a>
+                  <a class="TBsliderNav" aria-label="Go to slide 3">
+                    <div>Lorem ipsum</div>
+                  </a>
+                </div>
+                <div class="blankHS"></div>
+              </div>
+              <div class="blankHXS"></div>
+            </div>
           </section>
           <div class="blankHM"></div>
 
