--- a/architecture/index.html
+++ b/architecture/index.html
@@ -208,7 +208,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class=" float cardBorder shadowBoxLt">
-            <img src="./ar_06.jpg" alt="Appointa">
+            <img src="./ar_06.png" alt="Appointa">
             <div class="elementInner">
               <h5>Form finding exercise </h5>
               <h3 class="arrCard"><strong>KAPPE HOUSE STUDY</strong></h3>
